# predicting-bugs-gnn

./: .gitignore  LICENSE  main.py  pyproject.toml  readme.md
models/: DBConnector.py
models/datasets/: __init__.py  bugs_dataset.py  bugs_pair_dataset.py  complexity_dataset.py  mongodb_datasource.py
models/source_graph/: node_label_charcnn_embedding_layer.py  source_graph_input.py  source_graph_tensors.py  string2tensor.py
models/source_graph/binary_classification/: source_graph_binary_classification_model.py
models/source_graph/diff_graphs/: diff_graph_input.py  diff_graph_model.py
models/source_graph/regression/: source_graph_regression_model.py
